--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,10 +48,11 @@
 
     </div>
 </div>
+<div id="contentbox">
 {% block body %}
 
 {% endblock %}
-
+</div>
 </body>
 <footer class="footer-div">
     <p><a href="#" style="color:black;">@MarvelousTiptopTechnology</a> pour Eni-Ecole</p>
