--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post" class="pure-form pure-form-aligned centred-conteneur">
+<form method="post" class="pure-form pure-form-aligned centred-conteneur formlogin">
     <fieldset>
         <legend>Connectez-vous s'il vous plait</legend>
         {% if error %}
