--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -40,7 +40,7 @@
             <label for="cb-input" class="pure-checkbox">
                 <input id="cb-input" type="checkbox" name="remember_me"> se souvenir de moi
             </label>
-            <button class="pure-button pure-button-primary" type="submit">
+            <button class="pure-button button-primary" type="submit">
                 Connection
             </button>
         </div>
