--- a/templates/sortie/sortie.html.twig
+++ b/templates/sortie/sortie.html.twig
@@ -86,7 +86,7 @@
             </div>
         </fieldset>
     </div>
-    <div class="centred-conteneur mt1">
+    <div class="centred-conteneur mt1 mbb">
         <table class="pure-table detail-table">
             <thead>
             <tr>
