--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,9 +54,9 @@
 {% endblock %}
 </div>
 </body>
-<footer class="footer-div">
+{#<footer class="footer-div">
     <p><a href="#" style="color:black;">@MarvelousTiptopTechnology</a> pour Eni-Ecole</p>
-</footer>
+</footer>#}
 <script src="{{ asset('js/error.js') }}"></script>
 {% if error is defined %}
     <script>
