reset in modif deleted

--- a/templates/sortie/sortieModification.html.twig
+++ b/templates/sortie/sortieModification.html.twig
@@ -43,10 +43,10 @@
                     </div>
 
                     <div class="pure-control-group">
-                        {{ form_row(formUpdate.duree, { 'attr' : { 'min' : '15' , 'value' : '15'}}) }}
+                        {{ form_row(formUpdate.duree, { 'attr' : { 'min' : '15'}}) }}
                     </div>
                     <div class="pure-control-group">
-                        {{ form_row(formUpdate.nbInscriptionMax, { 'attr' : { 'min' : '1' , 'value' : '1'}}) }}
+                        {{ form_row(formUpdate.nbInscriptionMax, { 'attr' : { 'min' : '1'}}) }}
                     </div>
                     <div class="pure-control-group">
                         {{ form_row(formUpdate.infosSortie) }}
